--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "npm@9",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -28,6 +29,4 @@
     "globals": "^16.4.0",
     "vite": "^7.1.7"
   }
-
-
 }
